feat: regerado relatório do Coverage

--- a/relatorio-coverage/z_05a80ca4acd2188e_serializers_py.html
+++ b/relatorio-coverage/z_05a80ca4acd2188e_serializers_py.html
@@ -65,7 +65,7 @@
             <a id="nextFileLink" class="nav" href="z_05a80ca4acd2188e_urls_py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-21 21:09 -0300
+            created at 2024-09-22 13:49 -0300
         </p>
         <aside class="hidden">
             <button type="button" class="button_next_chunk" data-shortcut="j"></button>
@@ -94,7 +94,7 @@
     <p class="pln"><span class="n"><a id="t12" href="#t12">12</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t13" href="#t13">13</a></span><span class="t">    <span class="key">class</span> <span class="nam">Meta</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t14" href="#t14">14</a></span><span class="t">        <span class="nam">model</span> <span class="op">=</span> <span class="nam">Projeto</span>&nbsp;</span><span class="r"></span></p>
-    <p class="run"><span class="n"><a id="t15" href="#t15">15</a></span><span class="t">        <span class="nam">fields</span> <span class="op">=</span> <span class="op">[</span><span class="str">'nome'</span><span class="op">,</span> <span class="str">'descricao'</span><span class="op">,</span> <span class="str">'laboratorio'</span><span class="op">,</span> <span class="str">'data_de_criacao'</span><span class="op">,</span> <span class="str">'vagas'</span><span class="op">,</span> <span class="str">'responsavel'</span><span class="op">,</span> <span class="str">'habilidades'</span><span class="op">]</span>&nbsp;</span><span class="r"></span></p>
+    <p class="run"><span class="n"><a id="t15" href="#t15">15</a></span><span class="t">        <span class="nam">fields</span> <span class="op">=</span> <span class="op">[</span><span class="str">'nome'</span><span class="op">,</span> <span class="str">'descricao'</span><span class="op">,</span> <span class="str">'laboratorio'</span><span class="op">,</span> <span class="str">'data_de_criacao'</span><span class="op">,</span> <span class="str">'vagas'</span><span class="op">,</span> <span class="str">'responsavel'</span><span class="op">,</span> <span class="str">'habilidades'</span><span class="op">,</span> <span class="str">'encerrado'</span><span class="op">]</span>&nbsp;</span><span class="r"></span></p>
     <p class="pln"><span class="n"><a id="t16" href="#t16">16</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="pln"><span class="n"><a id="t17" href="#t17">17</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t18" href="#t18">18</a></span><span class="t"><span class="key">class</span> <span class="nam">ProjetoInformacoesSerializer</span><span class="op">(</span><span class="nam">serializers</span><span class="op">.</span><span class="nam">ModelSerializer</span><span class="op">)</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
@@ -102,7 +102,7 @@
     <p class="pln"><span class="n"><a id="t20" href="#t20">20</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t21" href="#t21">21</a></span><span class="t">    <span class="key">class</span> <span class="nam">Meta</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t22" href="#t22">22</a></span><span class="t">        <span class="nam">model</span> <span class="op">=</span> <span class="nam">Projeto</span>&nbsp;</span><span class="r"></span></p>
-    <p class="run"><span class="n"><a id="t23" href="#t23">23</a></span><span class="t">        <span class="nam">fields</span> <span class="op">=</span> <span class="op">[</span><span class="str">'nome'</span><span class="op">,</span> <span class="str">'descricao'</span><span class="op">,</span> <span class="str">'laboratorio'</span><span class="op">,</span> <span class="str">'vagas'</span><span class="op">,</span> <span class="str">'habilidades'</span><span class="op">]</span>&nbsp;</span><span class="r"></span></p>
+    <p class="run"><span class="n"><a id="t23" href="#t23">23</a></span><span class="t">        <span class="nam">fields</span> <span class="op">=</span> <span class="op">[</span><span class="str">'nome'</span><span class="op">,</span> <span class="str">'descricao'</span><span class="op">,</span> <span class="str">'laboratorio'</span><span class="op">,</span> <span class="str">'vagas'</span><span class="op">,</span> <span class="str">'habilidades'</span><span class="op">,</span> <span class="str">'encerrado'</span><span class="op">]</span>&nbsp;</span><span class="r"></span></p>
     <p class="pln"><span class="n"><a id="t24" href="#t24">24</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="pln"><span class="n"><a id="t25" href="#t25">25</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t26" href="#t26">26</a></span><span class="t"><span class="key">class</span> <span class="nam">ListaFiltragemPostSerializer</span><span class="op">(</span><span class="nam">serializers</span><span class="op">.</span><span class="nam">ModelSerializer</span><span class="op">)</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
@@ -235,7 +235,7 @@
     <p class="pln"><span class="n"><a id="t153" href="#t153">153</a></span><span class="t">&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t154" href="#t154">154</a></span><span class="t">    <span class="key">class</span> <span class="nam">Meta</span><span class="op">:</span>&nbsp;</span><span class="r"></span></p>
     <p class="run"><span class="n"><a id="t155" href="#t155">155</a></span><span class="t">        <span class="nam">model</span> <span class="op">=</span> <span class="nam">Projeto</span>&nbsp;</span><span class="r"></span></p>
-    <p class="run"><span class="n"><a id="t156" href="#t156">156</a></span><span class="t">        <span class="nam">fields</span> <span class="op">=</span> <span class="op">[</span><span class="str">'id_projeto'</span><span class="op">,</span> <span class="str">'nome'</span><span class="op">,</span> <span class="str">'descricao'</span><span class="op">,</span> <span class="str">'laboratorio'</span><span class="op">,</span> <span class="str">'data_de_criacao'</span><span class="op">,</span> <span class="str">'vagas'</span><span class="op">,</span> <span class="str">'responsavel'</span><span class="op">,</span> <span class="str">'habilidades'</span><span class="op">,</span> <span class="str">'colaboradores'</span><span class="op">]</span>&nbsp;</span><span class="r"></span></p>
+    <p class="run"><span class="n"><a id="t156" href="#t156">156</a></span><span class="t">        <span class="nam">fields</span> <span class="op">=</span> <span class="op">[</span><span class="str">'id_projeto'</span><span class="op">,</span> <span class="str">'nome'</span><span class="op">,</span> <span class="str">'descricao'</span><span class="op">,</span> <span class="str">'laboratorio'</span><span class="op">,</span> <span class="str">'data_de_criacao'</span><span class="op">,</span> <span class="str">'vagas'</span><span class="op">,</span> <span class="str">'responsavel'</span><span class="op">,</span>  <span class="str">'encerrado'</span><span class="op">,</span> <span class="str">'habilidades'</span><span class="op">,</span> <span class="str">'colaboradores'</span><span class="op">]</span>&nbsp;</span><span class="r"></span></p>
 </main>
 <footer>
     <div class="content">
@@ -245,7 +245,7 @@
             <a class="nav" href="z_05a80ca4acd2188e_urls_py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-21 21:09 -0300
+            created at 2024-09-22 13:49 -0300
         </p>
     </div>
 </footer>
