--- a/relatorio-coverage/function_index.html
+++ b/relatorio-coverage/function_index.html
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-21 21:09 -0300
+            created at 2024-09-22 13:49 -0300
         </p>
     </div>
 </header>
@@ -251,14 +251,14 @@
             <tr class="region">
                 <td class="name left"><a href="z_c9358f25a922197b_views_py.html#t185">api_aluno\views.py</a></td>
                 <td class="name left"><a href="z_c9358f25a922197b_views_py.html#t185"><data value='interessar_no_projeto'>interessar_no_projeto</data></a></td>
-                <td>12</td>
+                <td>14</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="12 12">100%</td>
+                <td class="right" data-ratio="14 14">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_c9358f25a922197b_views_py.html#t206">api_aluno\views.py</a></td>
-                <td class="name left"><a href="z_c9358f25a922197b_views_py.html#t206"><data value='retirar_interessar_no_projeto'>retirar_interessar_no_projeto</data></a></td>
+                <td class="name left"><a href="z_c9358f25a922197b_views_py.html#t209">api_aluno\views.py</a></td>
+                <td class="name left"><a href="z_c9358f25a922197b_views_py.html#t209"><data value='retirar_interessar_no_projeto'>retirar_interessar_no_projeto</data></a></td>
                 <td>14</td>
                 <td>0</td>
                 <td>0</td>
@@ -401,32 +401,32 @@
                 <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t19">api_projeto\models.py</a></td>
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t19"><data value='str__'>Projeto.__str__</data></a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t20">api_projeto\models.py</a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t20"><data value='str__'>Projeto.__str__</data></a></td>
                 <td>1</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="1 1">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t51">api_projeto\models.py</a></td>
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t51"><data value='clean'>Lista_Filtragem.clean</data></a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t52">api_projeto\models.py</a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t52"><data value='clean'>Lista_Filtragem.clean</data></a></td>
                 <td>2</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="2 2">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t55">api_projeto\models.py</a></td>
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t55"><data value='validate_filtro_disciplinas'>Lista_Filtragem.validate_filtro_disciplinas</data></a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t56">api_projeto\models.py</a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t56"><data value='validate_filtro_disciplinas'>Lista_Filtragem.validate_filtro_disciplinas</data></a></td>
                 <td>13</td>
                 <td>6</td>
                 <td>0</td>
                 <td class="right" data-ratio="7 13">54%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t71">api_projeto\models.py</a></td>
-                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t71"><data value='save'>Lista_Filtragem.save</data></a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t72">api_projeto\models.py</a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html#t72"><data value='save'>Lista_Filtragem.save</data></a></td>
                 <td>2</td>
                 <td>0</td>
                 <td>0</td>
@@ -435,10 +435,10 @@
             <tr class="region">
                 <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html">api_projeto\models.py</a></td>
                 <td class="name left"><a href="z_05a80ca4acd2188e_models_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>40</td>
+                <td>41</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="40 40">100%</td>
+                <td class="right" data-ratio="41 41">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_05a80ca4acd2188e_serializers_py.html#t37">api_projeto\serializers.py</a></td>
@@ -593,12 +593,28 @@
                 <td class="right" data-ratio="11 12">92%</td>
             </tr>
             <tr class="region">
+                <td class="name left"><a href="z_05a80ca4acd2188e_views_py.html#t437">api_projeto\views.py</a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_views_py.html#t437"><data value='encerrar_projeto'>encerrar_projeto</data></a></td>
+                <td>14</td>
+                <td>2</td>
+                <td>0</td>
+                <td class="right" data-ratio="12 14">86%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_05a80ca4acd2188e_views_py.html#t459">api_projeto\views.py</a></td>
+                <td class="name left"><a href="z_05a80ca4acd2188e_views_py.html#t459"><data value='abrir_projeto'>abrir_projeto</data></a></td>
+                <td>14</td>
+                <td>2</td>
+                <td>0</td>
+                <td class="right" data-ratio="12 14">86%</td>
+            </tr>
+            <tr class="region">
                 <td class="name left"><a href="z_05a80ca4acd2188e_views_py.html">api_projeto\views.py</a></td>
                 <td class="name left"><a href="z_05a80ca4acd2188e_views_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>52</td>
+                <td>58</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="52 52">100%</td>
+                <td class="right" data-ratio="58 58">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_00684d0c7c392730_admin_py.html">api_rest\admin.py</a></td>
@@ -789,10 +805,10 @@
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>1221</td>
-                <td>136</td>
+                <td>1258</td>
+                <td>140</td>
                 <td>0</td>
-                <td class="right" data-ratio="1085 1221">89%</td>
+                <td class="right" data-ratio="1118 1258">89%</td>
             </tr>
         </tfoot>
     </table>
@@ -804,7 +820,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-21 21:09 -0300
+            created at 2024-09-22 13:49 -0300
         </p>
     </div>
     <aside class="hidden">
